# activity07

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
threeXPlusOne/: README.md  pyproject.toml
threeXPlusOne/threexplusone/: main.py
writing/: reflection.md
